objects/User/fields/Allow_Creating_POs_with_Multiple_SCs__c.field-meta.xml
<CustomField>
    <fullName>Allow_Creating_POs_with_Multiple_SCs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Creating POs with Multiple SCs</label>
    <type>Checkbox</type>
</CustomField>