objects/User/fields/Allow_Deleting_Approved_POs__c.field-meta.xml
<CustomField>
    <fullName>Allow_Deleting_Approved_POs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Deleting Approved POs</label>
    <type>Checkbox</type>
</CustomField>