objects/User/fields/Allow_Deleting_Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Allow_Deleting_Bill_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Deleting Bill-to Customer</label>
    <type>Checkbox</type>
</CustomField>