objects/User/fields/Allow_Mobile_TM_via_Desktop__c.field-meta.xml
<CustomField>
    <fullName>Allow_Mobile_TM_via_Desktop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Mobile T&amp;M via Desktop</label>
    <type>Checkbox</type>
</CustomField>