objects/User/fields/Allow_to_Change_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Allow_to_Change_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow to Change Account Owner</label>
    <type>Checkbox</type>
</CustomField>