objects/User/fields/Allow_Unpost__c.field-meta.xml
<CustomField>
    <fullName>Allow_Unpost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Unpost</label>
    <type>Checkbox</type>
</CustomField>