objects/User/fields/Approver_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Approver_Quotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approver Quotes</label>
    <type>Checkbox</type>
</CustomField>