objects/User/fields/Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Name__c</fullName>
    <label>Area Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlantic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>