objects/User/fields/BDD__c.field-meta.xml
<CustomField>
    <fullName>BDD__c</fullName>
    <defaultValue>"NA"</defaultValue>
    <label>BDD</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDD1</fullName>
            </value>
            <value>
                <fullName>BDD2</fullName>
            </value>
            <value>
                <fullName>BDD3</fullName>
            </value>
            <value>
                <fullName>BDD4</fullName>
            </value>
            <value>
                <fullName>BDD5</fullName>
            </value>
            <value>
                <fullName>BDD6</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>