objects/User/fields/Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Manager</label>
    <type>Checkbox</type>
</CustomField>