objects/User/fields/Credit_Approver__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Approver</label>
    <type>Checkbox</type>
</CustomField>