objects/User/fields/Equipment_Manager__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Manager</label>
    <type>Checkbox</type>
</CustomField>