objects/User/fields/Integration_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Integration_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Administrator</label>
    <type>Checkbox</type>
</CustomField>