objects/User/fields/Manager_of_SC_2__c.field-meta.xml
<CustomField>
    <fullName>Manager_of_SC_2__c</fullName>
    <label>Manager of SC 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>