objects/User/fields/Manager_of_SC__c.field-meta.xml
<CustomField>
    <fullName>Manager_of_SC__c</fullName>
    <label>Manager of SC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>