objects/User/fields/Purchasing_Department_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Department_Receiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchasing Department Receiver</label>
    <type>Checkbox</type>
</CustomField>