objects/User/fields/RSG_EIN__c.field-meta.xml
<CustomField>
    <fullName>RSG_EIN__c</fullName>
    <description>Employee Workday Number</description>
    <label>RSG EIN #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>