objects/User/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <label>Sales Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A30 - Gulf</fullName>
            </value>
            <value>
                <fullName>A31 - Atlantic</fullName>
            </value>
            <value>
                <fullName>A32 - Central</fullName>
            </value>
            <value>
                <fullName>A33 - Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>