objects/User/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <label>Service Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
                <label>SC02 Republic Services – Clayton</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>SC04 Republic Services – Baltimore</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>SC07 Republic Services – Norfolk</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>SC15 Republic Services – Avenel</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>SC16 Republic Services – Skowhegan</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>SC17 Republic Services – Middletown New York</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>SC19 Republic Services – Windsor Locks</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>SC20 Republic Services - Nashua</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>SC21 Republic Services – Bridgeport</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>SC22 Republic Services – Griffith</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>SC24 Republic Services – Pulaski</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>SC25 Republic Services – Lewisberry</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>SC27 Republic Services – Albany</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>SC28 Republic Services - Essex Junction</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>SC29 Republic Services - Hopewell Junction</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>SC30 Republic Services - Imperial</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>SC31 Republic Services – Rahway</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>SC32 Republic Services – Brooklyn</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>SC33 Republic Services – Aston</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>SC40 Republic Services -Rensselaer</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>SC41 Republic Services - Hydro, PA and NJ</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>SC64 Republic Services – Greensboro</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>SC65 Republic Services – Lexington</label>
            </value>
            <value>
                <fullName>66</fullName>
                <label>SC66 Republic Services – Americus</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>SC73 Republic Services - Metro Lab Pack</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>SC74 Republic Services - Baltimore Lab Pack</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>SC75 Republic Services - Pennsylvania Lab Pack</label>
            </value>
            <value>
                <fullName>77</fullName>
                <label>SC77 Republic Services – Woonsocket Lab Pack</label>
            </value>
            <value>
                <fullName>96</fullName>
                <label>SC96 Republic Services - National Services</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>SC98 Republic Services - ER Events</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>