objects/User/fields/Super_User__c.field-meta.xml
<CustomField>
    <fullName>Super_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Super User</label>
    <type>Checkbox</type>
</CustomField>